--- a/index.yaml
+++ b/index.yaml
@@ -9,3 +9,14 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: Session
+  properties:
+  - name: key_name
+  - name: exp_date
+
+- kind: Spam
+  properties:
+  - name: parent_spam
+  - name: updated_at
+    direction: desc
