--- a/app.yaml
+++ b/app.yaml
@@ -7,6 +7,10 @@ handlers:
 - url: /static
   static_dir: static
 
+- url: /favicon.ico
+  static_files: static/img/favicon.ico
+  upload: static/img/favicon.ico
+
 - url: /u/.*
   script: bitsable/bitsbang/user/main.py
 
